--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple calculator</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <body>
@@ -37,7 +37,7 @@
             </div>
         </div>
     
-        <script src=""></script>
+        <script src="src/js/calculator.js"></script>
     </body>
 </body>
 </html>
